--- a/clusters/demo/flux-system/kustomization.yaml
+++ b/clusters/demo/flux-system/kustomization.yaml
@@ -1,8 +1,5 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.config.k8s.io/v1
 kind: Kustomization
-metadata:
-  name: flux-system
-  namespace: flux-system
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
