--- a/clusters/demo/flux-system/kustomization.yaml
+++ b/clusters/demo/flux-system/kustomization.yaml
@@ -1,4 +1,4 @@
-apiVersion: kustomize.config.k8s.io/apps/v1
+apiVersion: kustomize.config.k8s.io/v0.19.1
 kind: Kustomization
 resources:
 - gotk-components.yaml
